--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="itcenter.dangara.libaryappdemo">
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -9,7 +10,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
-
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,12 @@
         android:theme="@style/Theme.LibaryappDemo"
         tools:targetApi="31">
         <activity
+            android:name=".test.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".loginpage.SmsVerificationActivity"
+            android:exported="false" />
+        <activity
             android:name=".loginpage.PasswordResendActivity"
             android:exported="false" />
         <activity
@@ -31,7 +39,7 @@
             android:name=".loginpage.SmsActivity"
             android:exported="false" />
         <activity
-            android:name=".loginpage.RegisterActivity"
+            android:name=".SplashScreen"
             android:exported="false" />
         <activity
             android:name=".loginpage.LoginActivity"
@@ -40,10 +48,10 @@
             android:name=".SliderActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".loginpage.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
