--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
         android:theme="@style/Theme.LibaryappDemo"
         tools:targetApi="31">
         <activity
-            android:name=".test.MainActivity"
+            android:name=".TolovActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TilActivity"
             android:exported="false" />
         <activity
             android:name=".loginpage.SmsVerificationActivity"
